<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sw_watchdog</name>
  <version>0.1.0</version>
  <description>Package containing a SW watchdog implemented as a lifecycle node</description>
  <maintainer email="robbel@gmail.com">Philipp Robbel</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>lifecycle_msgs</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rclcpp_lifecycle</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>ros2run</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ros_testing</test_depend>
  <!--<exec_depend>rosidl_default_runtime</exec_depend>-->

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
